--- a/haxball_site/templates/tournament/premier_league/team_table.html
+++ b/haxball_site/templates/tournament/premier_league/team_table.html
@@ -10,7 +10,7 @@
         }
     </style>
 {% endblock %}
-{% block title %}Чемпионат | Команды          cis-haxball.com {% endblock %}
+{% block title %}Чемпионат | {{ league.title }}          cis-haxball.com {% endblock %}
 {% block profile_of_user %}
     <div class="card mb-4 mt-2" style="border-radius: 25px">
         <div class="card-header pb-0" style="border-radius: 25px 25px 0 0">
