--- a/haxball_site/templates/tournament/include/league_table.html
+++ b/haxball_site/templates/tournament/include/league_table.html
@@ -32,13 +32,12 @@
 
             <th scope="row" width="5%">{{ forloop.counter }}</th>
 
-            <td class="text-left" width="32%">
+            <td class="text-left px-0" width="32%">
 
                 <a class="text-dark font-weight-bold h5" href="{{ team.0.get_absolute_url }}"
                    class="h5"><img
                         src="{{ team.0.logo.url }}" alt="{{ team.0.title }}" width="35" height="35"
-                        class="mr-1">{% if team.0.title|length < 15 %}{{ team.0.title }}{% else %}
-                    {{ team.0.short_title }}{% endif %}</a>
+                        class="mr-1">{% if team.0.title|length < 18 %}{{ team.0.title }}{% else %}{{ team.0.short_title }}{% endif %}</a>
             </td>
             <td width="6%">{{ team.1 }}</td>
             <td width="6%">{{ team.2 }}</td>
