--- a/haxball_site/templates/tournament/include/league_table.html
+++ b/haxball_site/templates/tournament/include/league_table.html
@@ -11,7 +11,7 @@
 <table class="table table-hover">
     <thead>
     <tr>
-        <th scope="col">#</th>
+        <th scope="col" class="font-weight-bold h5">#</th>
         <th scope="col">Команда</th>
         <th scope="col">И</th>
         <th scope="col">В</th>
@@ -32,7 +32,7 @@
             class="font-weight-bold"
         >
 
-            <th scope="row" width="5%">{{ forloop.counter }}</th>
+            <th scope="row" class="px-1 h5 font-weight-bold" width="4%">{{ forloop.counter }}</th>
 
             <td class="text-left px-0" width="34%">
 
