--- a/haxball_site/templates/core/include/comments.html
+++ b/haxball_site/templates/core/include/comments.html
@@ -35,8 +35,10 @@
                         <div class="d-flex flex-row comment-row" id="r{{ comment.id }}">
                             <div class="p-2">
                             <span class="round">
+                                <a href="{{ comment.author.user_profile.get_absolute_url }}">
                                 <img src="{{ comment.author.user_profile.avatar.url }}"
                                      alt="{{ comment.author.username }}" width="50">
+                                </a>
                             </span>
                             </div>
                             <div class="comment-text w-100">
@@ -119,8 +121,10 @@
                                  id="r{{ children.id }}">
                                 <div class="p-2">
                             <span class="round">
+                                <a href="{{ children.author.user_profile.get_absolute_url }}">
                                 <img src="{{ children.author.user_profile.avatar.url }}"
                                      alt="{{ children.author.username }}" width="50">
+                                </a>
                             </span>
                                 </div>
                                 <div class="comment-text w-100">
