--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -157,10 +157,8 @@
     </div>
 
 
-
-
-
-
-
 {% endblock %}
 
+{% block comments %}
+    {% include 'core/include/new_comments.html' with object=profile comments=comments %}
+{% endblock %}
