--- a/haxball_site/templates/core/post/detail.html
+++ b/haxball_site/templates/core/post/detail.html
@@ -56,7 +56,7 @@
             </p>
         </div>
         <div class="card-footer d-inline-flex justify-content-between" style="cursor: pointer">
-            <span class="text-muted"> Комментариев: {{ comments.count }} </span>
+            <span class="text-muted"> Комментариев: {{ post.comments.count }} </span>
 
             <div>
 
