--- a/haxball_site/templates/tournament/include/league_table.html
+++ b/haxball_site/templates/tournament/include/league_table.html
@@ -57,8 +57,7 @@
                                                                                          text-danger
                                                                            {% elif result.1 == 0 %}
                                                                                     text-secondary
-                                                                                   {% endif %}" title="
-                     Тур {{ result.0.numb_tour }}
+                                                                                   {% endif %}" title="         Тур {{ result.0.numb_tour }}
 {{ result.0.team_home.title }} {{ result.0.score_home }} : {{ result.0.score_guest }} {{ result.0.team_guest.title }}">
                     <!--<i class=" aria-hidden="true"></i>-->
                 </a>
