--- a/haxball_site/templates/core/include/new_comments.html
+++ b/haxball_site/templates/core/include/new_comments.html
@@ -67,9 +67,32 @@
                                             <i class="fa fa-pencil" aria-hidden="true"></i>
                                             </a>
 
-                                            <!--<a href="#" class="text-danger">
+                                            <a class="text-danger" data-toggle="modal" data-target="#deleter{{ comment.id }}">
                                             <i class="fa fa-times" aria-hidden="true" style="font-size: 20px"></i>
-                                            </a>-->
+                                            </a>
+
+                                            <!-- Modal -->
+                                                <div class="modal fade" id="deleter{{ comment.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                  <div class="modal-dialog">
+                                                    <div class="modal-content">
+                                                      <div class="modal-header justify-content-center">
+                                                        <h4 class="modal-title">Удалить комментарий?</h4>
+                                                          <!--
+                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                          <span aria-hidden="true">&times;</span>
+                                                          -->
+                                                        </button>
+                                                      </div>
+                                                      <div class="modal-footer justify-content-center">
+                                                        <button type="button" class="btn btn-danger" data-dismiss="modal">Нет, подождите</button>
+                                                          <form method="POST" action="{% url 'core:delete_comment' comment.id %}">
+                                                                {% csrf_token %}
+                                                                <button type="submit" class="btn btn-primary">Да, я уверен</button>
+                                                          </form>
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                </div>
                                         </span>
                                     {% endif %}
                                 </div>
@@ -167,9 +190,32 @@
                                             <i class="fa fa-pencil" aria-hidden="true"></i>
                                             </a>
 
-                                                <!--<a href="#" class="text-danger">
-                                                <i class="fa fa-times" aria-hidden="true" style="font-size: 20px"></i>
-                                                </a>-->
+                                            <a class="text-danger" data-toggle="modal" data-target="#deleter{{ children.id }}">
+                                            <i class="fa fa-times" aria-hidden="true" style="font-size: 20px"></i>
+                                            </a>
+
+                                            <!-- Modal -->
+                                                <div class="modal fade" id="deleter{{ children.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                  <div class="modal-dialog">
+                                                    <div class="modal-content">
+                                                      <div class="modal-header justify-content-center">
+                                                        <h4 class="modal-title">Удалить комментарий?</h4>
+                                                          <!--
+                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                          <span aria-hidden="true">&times;</span>
+                                                          -->
+                                                        </button>
+                                                      </div>
+                                                      <div class="modal-footer justify-content-center">
+                                                        <button type="button" class="btn btn-danger" data-dismiss="modal">Нет, подождите</button>
+                                                          <form method="POST" action="{% url 'core:delete_comment' children.id %}">
+                                                                {% csrf_token %}
+                                                                <button type="submit" class="btn btn-primary">Да, я уверен</button>
+                                                          </form>
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                </div>
                                         </span>
                                         {% endif %}
                                     </div>
