--- a/haxball_site/templates/core/include/new_comments.html
+++ b/haxball_site/templates/core/include/new_comments.html
@@ -225,7 +225,7 @@
                                        aria-hidden="true"></i>  {{ children.created|date:"SHORT_DATE_FORMAT" }}
                                     <i class="fa fa-clock-o text-primary"
                                        aria-hidden="true"></i>{{ children.created|time:"H:i" }}
-                                    <!-- {{ children.created|timesince }} назад -->
+                                    <!-- {# children.created|timesince #} назад -->
                                 </span>
 
                                         <!-- ВОТ ТУТА -->
