--- a/haxball_site/templates/tournament/premier_league/team_table.html
+++ b/haxball_site/templates/tournament/premier_league/team_table.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% load tournament_extras %}
 {% block styles %}
-    <!-- <link rel="stylesheet" type="text/css" href="{% static "tournament/teams/team_page.css" %}"> -->
-
+    <!-- <link rel="stylesheet" type="text/css" href="{# static "tournament/teams/team_page.css" #}"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <style>
         body {
             background-image: url({% static "img/backgrounds/bg-light-4860.png" %})
