--- a/haxball_site/templates/tournament/include/league_table.html
+++ b/haxball_site/templates/tournament/include/league_table.html
@@ -1,10 +1,15 @@
 <style>
+
     .team-form a:hover {
         font-size: 18px;
         text-decoration: none;
     }
-    .main-col {
-
+    .team-rows {
+        font-family: 'Roboto Slab', serif;
+    }
+    .table td {
+        padding-bottom: 1px;
+        padding-top: 1px;
     }
 
 </style>
@@ -30,15 +35,15 @@
         <tr {% if forloop.counter == 1 %}bgcolor="#ffe000"{% endif %}
             {% if forloop.counter == 2 %}bgcolor="silver"{% endif %}
             {% if forloop.counter == 3 %}bgcolor="#ffa81c"{% endif %}
-            class="font-weight-bold"
+            class="team-rows py-1"
         >
 
-            <th scope="row" class="px-1 h5 font-weight-bold" width="4%">{{ forloop.counter }}</th>
+            <th scope="row" class="px-1 h6" width="4%">{{ forloop.counter }}</th>
 
             <td class="text-left px-0" width="34%">
 
-                <a class="text-dark font-weight-bold h5" href="{{ team.0.get_absolute_url }}"><img
-                        src="{{ team.0.logo.url }}" alt="{{ team.0.title }}" width="28" height="28"
+                <a class="text-dark h6" href="{{ team.0.get_absolute_url }}"><img
+                        src="{{ team.0.logo.url }}" alt="{{ team.0.title }}" width="22" height="22"
                         class="mr-1">{% if team.0.title|length < 20 %}{{ team.0.title }}{% else %}{{ team.0.short_title }}{% endif %}</a>
             </td>
             <td width="6%">{{ team.1 }}</td>
