--- a/haxball_site/templates/tournament/include/league_table.html
+++ b/haxball_site/templates/tournament/include/league_table.html
@@ -7,14 +7,14 @@
     .team-rows {
         font-family: 'Roboto Slab', serif;
     }
-    .table td {
+    .team-table-league td {
         padding-bottom: 1px;
         padding-top: 1px;
     }
 
 </style>
 
-<table class="table table-hover">
+<table class="table table-hover team-table-league">
     <thead>
     <tr>
         <th scope="col" class="font-weight-bold h5">#</th>
